# genxml-editor

./: .gitmodules  CMakeLists.txt  main.cpp  main_ui.cpp  main_ui.h  xml_parser.cpp  xml_parser.h  xml_saver.cpp  xml_saver.h  xml_types.h  xml_ui.cpp  xml_ui.h
